bases/rh-helloworld/rh-helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rh-helloworld
  labels:
    app: rh-helloworld
spec:
  selector:
    app: rh-helloworld
    deploymentconfig: rh-helloworld
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
  type: ClusterIP
