bases/rh-helloworld/rh-helloworld-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: rh-helloworld
  name: rh-helloworld
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: rh-helloworld
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
